# ari_parser

./: .gitignore  pyproject.toml  requirements.txt
ari_parser/: bot.py  crawler.py  main.py  manage.py
ari_parser/models/: __init__.py  account.py  chat.py  db.py  driver.py  exceptions.py  logger.py  page.py  user.py
ari_parser/settings/: __init__.py  locators.py
ari_parser/utils/: __init__.py  url.py
